2008-07-10 Bugfix: [ 2013963 ] update_datalim_bounds in Axes not works - MGD

2008-07-10 Bugfix: [ 2014183 ] multiple imshow() causes gray edges - MGD

2008-07-09 Fix rectangular axes patch on polar plots bug - MGD

2008-07-09 Improve mathtext radical rendering - MGD

2008-07-08 Improve mathtext superscript placement - MGD

2008-07-07 Fix custom scales in pcolormesh (thanks Matthew Turk) - MGD

2008-07-03 Implemented findobj method for artist and pyplot - see
           examples/pylab_examples/findobj_demo.py - JDH

2008-06-30 Another attempt to fix TextWithDash - DSD

2008-06-30 Removed Qt4 NavigationToolbar2.destroy -- it appears to
           have been unnecessary and caused a bug reported by P.
           Raybaut - DSD

2008-06-27 Fixed tick positioning bug - MM

2008-06-27 Fix dashed text bug where text was at the wrong end of the
           dash - MGD

2008-06-26 Fix mathtext bug for expressions like $x_{\leftarrow}$ - MGD

2008-06-26 Fix direction of horizontal/vertical hatches - MGD

2008-06-25 Figure.figurePatch renamed Figure.patch, Axes.axesPatch
           renamed Axes.patch, Axes.axesFrame renamed Axes.frame,
           Axes.get_frame, which returns Axes.patch, is deprecated.
           Examples and users guide updated - JDH

2008-06-25 Fix rendering quality of pcolor - MGD

=================================================================
2008-06-24 Released 0.98.2 at svn r5667 - (source only for debian) JDH

2008-06-24 Added "transparent" kwarg to savefig. - MGD

2008-06-24 Applied Stefan's patch to draw a sinle centered marker over
           a line with numpoints==1 - JDH

2008-06-23 Use splines to render circles in scatter plots - MGD

===============================================================
2008-06-22 Released 0.98.1 at revision 5637

2008-06-22 Removed axes3d support and replaced it with a
           NotImplementedError for one release cycle

2008-06-21 fix marker placement bug in backend_ps - DSD
