@@ -1,3 +1,5 @@
+2008-07-10 Bugfix: crash displaying fontconfig pattern - MGD
+
 2008-07-10 Bugfix: [ 2013963 ] update_datalim_bounds in Axes not works - MGD
 
 2008-07-10 Bugfix: [ 2014183 ] multiple imshow() causes gray edges - MGD
